--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "babel-node ./bin/www",
+    "start": "babel-node ./bin/www --exec",
     "nodemon": "nodemon ./bin/www",
     "devbabel": "nodemon ./bin/www --exec babel-node"
   },
   "dependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/preset-env": "^7.6.0",    
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -23,9 +27,6 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0"
+
   }
 }
